--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ all = [
     "click>=8.1.7",
     "pre-commit >=2.17.0,<4.0.0",
     "pydantic>=1.7.4,!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0",
-    "typing-extensions>=4.8.0",
+    "click-aliases>=1.0.4",
 ]
 tests = ["pytest"]
 docs = ["sphinx"]
