--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ authors = [
 requires-python = ">=3.7"
 keywords = ["cli", "neuragens", "command-line", "scaffold"]
 
+[tool.coverage.run]
+omit = ["tests/*", "*/.local/*", "/usr/*", "*.pyc"]
+
 [project.optional-dependencies]
 all = [
     "click>=8.1.7",
