--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,4 +1,4 @@
-name: Python package
+name: Python NeuraGens CLI
 
 on:
   push:
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest click>=8.1.7 click-aliases>=1.0.4 pytest-cov
+        python -m pip install flake8 pytest click>=8.1.7 click-aliases>=1.0.4 pytest-cov setuptools
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
