--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Lint with flake8
       run: |
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --exit-zero --max-complexidade=10 --max-line-length=127 --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
   test:
     runs-on: ubuntu-latest
@@ -57,7 +57,7 @@ jobs:
   create_pr:
     runs-on: ubuntu-latest
     needs: test
-    if: success()
+    if: success()  # Executa apenas se os testes forem bem-sucedidos
     steps:
     - uses: actions/checkout@v4
     - name: Set up Git configuration
@@ -72,4 +72,4 @@ jobs:
       run: |
         gh pr create --base main --head auto-pr-branch --title "Automated Pull Request" --body "📦 This pull request is created automatically by NeuraGens Actions. 📦"
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Se necessário, mas o PAT será usado para o push
