--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -64,12 +64,10 @@ jobs:
       run: |
         git config --local user.name "neuragens-actions"
         git config --local user.email "neuragens-actions@neuragens.com"
-    - name: Create and push branch
-      run: |
-        git checkout -b "auto-pr-branch"
-        git push https://x-access-token:${{ secrets.PAT }}@github.com/neuragens/cli.git "auto-pr-branch"
     - name: Create Pull Request
       run: |
-        gh pr create --base main --head auto-pr-branch --title "Automated Pull Request" --body "📦 This pull request is created automatically by NeuraGens Actions. 📦"
+        CURRENT_BRANCH=$(echo "${GITHUB_REF##*/}")  # Extrai o nome da branch atual
+        git push origin HEAD:refs/heads/$CURRENT_BRANCH  # Faz push para a branch atual
+        gh pr create --base main --head $CURRENT_BRANCH --title "Automated Pull Request" --body "📦 This pull request is created automatically by NeuraGens Actions. 📦"
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Se necessário, mas o PAT será usado para o push
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Usando GITHUB_TOKEN
