--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v7
       with:
-        token: ${{ secrets.NEURAGENS_TOKEN }}
+        token: ${{ secrets.neuragens }}
         branch: ${{ github.ref }}
         base: main
         title: "Automated Pull Request"
