--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -63,6 +63,8 @@ jobs:
     if: success()
     steps:
     - uses: actions/checkout@v4
+      with:
+        ref: main
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v7
       with:
