--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,3 +33,22 @@ jobs:
         run: |
           export PYTHONPATH=$(pwd)
           pytest tests
+  create_pr:
+    runs-on: ubuntu-latest
+    needs: test
+    if: success()
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v7
+        with:
+          token: ${{ secrets.neuragens }}
+          base: main
+          branch: ${{ github.ref }}
+          labels: enhancement
+          title: "Automated Pull Request"
+          body: "📦 This pull request is created automatically by NeuraGens Actions. 📦"
