--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,5 +50,5 @@ jobs:
           base: main
           branch: ${{ github.ref }}
           labels: enhancement
-          title: "Automated Pull Request - [REF][${{ github.ref }}]"
+          title: "Automated Pull Request - [${{ github.ref }}]"
           body: "📦 This pull request is created automatically by NeuraGens Actions. 📦"
