--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,11 @@ jobs:
         with:
           fetch-depth: 0
 
+
+      - name: Print Current Directory
+        run: |
+          echo "Current directory is: $(pwd)"
+          ls -la $(pwd)
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
         with:
