--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Print Current Directory
         run: |
           echo "Current directory is: $(pwd)"
-          ls -la $(pwd)
+          ls -la $(pwd)/.github/docs
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
         with:
@@ -56,4 +56,4 @@ jobs:
           labels: enhancement
           title: "Automated Pull Request - [${{ github.ref }}]"
           body: "📦 This pull request is created automatically by NeuraGens Actions. 📦"
-          body-path: ${{ github.workspace }}/../.github/docs/check.md
+          body-path: $(pwd)/.github/docs/check.md
