--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Print Current Directory
         run: |
           echo "Current directory is: $(pwd)"
-          ls -la ${{ github.workspace }}/.github
+          ls -la ${{ github.workspace }}/.github/workflows
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
         with:
